# bde

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  delete.py  for_codex.txt  genindex.html  index.html  loss_tree.json  objects.inv  pyproject.toml  quick_start.html  search.html  searchindex.js  sg_execution_times.html  uml.txt  user_guide.html
.github/workflows/: deploy-gh-pages.yml  lint.yml  python-app.yml
_downloads/2a4f08f3c64a9e3f6b288311fe49f05c/: example.ipynb
_downloads/ef9845e8ebafa12a1513da66be25ebf5/: example.py
_sources/: api.rst.txt  index.rst.txt  quick_start.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt
_sources/auto_examples/: example.rst.txt  index.rst.txt  plot_classifier.rst.txt  plot_template.rst.txt  plot_transformer.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
auto_examples/: example.html  index.html  plot_classifier.html  plot_template.html  plot_transformer.html  sg_execution_times.html
bde/: __init__.py  _template.py  bde.py  bde_builder.py  bde_evaluator.py  task.py
bde/data/: dataloader.py  preprocessor.py  utils.py
bde/loss/: loss.py
bde/models/: FNN_Builder.py  models.py
bde/sampler/: callbacks.py  mile_wrapper.py  my_types.py  prior.py  probabilistic.py  sampler.md  types.py  utils.py  warmup.py
bde/tests/: __init__.py  metrics.py  test_bde.py  test_common.py  test_template.py
bde/training/: FNN_Trainer.py  callbacks.py  trainer.py
bde/utils/: discovery.py
bde/utils/tests/: test_common.py  test_discovery.py
bde/viz/: plotting.py
doc/: api.rst  conf.py  index.rst  quick_start.rst  user_guide.rst
examples/: README.rst  example.py  example_workbook.py  fnn_example.py  plot_template.py  plot_transformer.py  workbook.ipynb
paper/: paper.bib  paper.md
