[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bde"
dynamic = ["version"]
authors = [
    { name = "Arvanitis Vyron", email = "vyronas.arvanitis@gmail.com" },
    { name = "Aslanidis Angelos", email = "..." },
    { name = "Sommer Emanuel", email = "..." }
]
description = "Bayesian Deep Ensembles with MILE (JAX), scikit-learn style."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.4.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/scikit-learn-contrib/bde"
Issues = "https://github.com/scikit-learn-contrib/bde/issues"

[tool.setuptools_scm]
version_file = "bde/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.9"
scikit-learn = ">=1.4.2"
numpy = ">=1.26.4"
scipy = ">=1.16.2"
tqdm = ">=4.67.1"
matplotlib = ">=3.8.4"
seaborn = ">=0.13.2"

[tool.pixi.pypi-dependencies]
jax = ">=0.4.28"
flax = ">=0.8.2"
optax = ">=0.2.1"
blackjax = "==1.2.2"
bde = { path = ".", editable = true }

[tool.pixi.feature.lint.dependencies]
# The version below should be aligned with the one of `.pre-commit-config.yaml`
black = "==23.3.0"
pre-commit = "==3.7.1"
ruff = "==0.14.4"

[tool.pixi.feature.lint.tasks]
black = { cmd = "black --check --diff bde && black --check --diff examples" }
ruff = { cmd = "ruff check --output-format=full bde && ruff check --output-format=full examples" }
lint = { depends-on = ["black", "ruff"] }

black-fix = { cmd = "black bde examples" }
ruff-fix = { cmd = "ruff check --fix bde examples" }
lint-fix = { depends-on = ["black-fix", "ruff-fix"] }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest -vsl --cov=bde --cov-report=xml bde" }

[tool.pixi.feature.doc.dependencies]
matplotlib = "*"
numpydoc = "*"
pydata-sphinx-theme = "*"
setuptools-scm = ">=8"  # needed for the versioning
sphinx = "*"
sphinx-design = "*"
sphinx-gallery = "*"
sphinx-prompt = "*"

[tool.pixi.feature.doc.tasks]
build-doc = { cmd = "make html", cwd = "doc" }
clean-doc = { cmd = "rm -rf _build", cwd = "doc" }

[tool.pixi.environments]
doc = ["doc"]
lint = ["lint"]
test = ["test"]
dev = ["doc", "lint", "test"]

[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''
force-exclude = "bde/_version.py"

[tool.ruff]
# General options
line-length = 88
target-version = "py38"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "doc/_build",
    "doc/auto_examples",
    "build",
    "bde/_version.py",
]

# Linting configuration
select = ["E", "F", "W", "I"]
ignore = [
    "E203",
    "E731",
    "E741",
]

[tool.ruff.per-file-ignores]
"examples/*" = ["E402"]
"doc/conf.py" = ["E402"]
"doc/_templates/numpydoc_docstring.py" = ["F821", "W292"]
